
 * Bug fixes (related to PyGObject and GSettings migration):
   - Get rid of traceback when quitting without a selection
   - Restore click on URL functionality
   - Fix initial size of notes field
   - Fix about dialog layout
   - Updated requirements in README file
   - Refactor and simplify GSettings code to use bindings
   - Add database path description to GSettings schema file

0.11 (2011-12-11):

 * Enhancements:
   - A help file is now available with basic usage instructions.
   - Re-enable launchpad integration
   - Added a README file

 * Bug fixes:
   - Removed debian packaging files from upstream project

0.10 (2011-10-02):

 * Enhancements:
   - Numerous improvements, thanks to Francesco Marella:
     - Figaro xml import script
     - Added option to automatically save changes
     - Added context menu to left pane
     - Added Clone command to clone an entry 

 * Bug fixes:
   - Save menu option and toolbar icon are now inactive when there is
     nothing to save.
   - Don't indicate save is required when a new entry is cancelled

0.9 (2011-09-15):

 * Enhancements:

 * Bug fixes:
   - Don't crash if a new entry is added and no entry is currently selected
     when attempting to update the right pane.

0.8 (2011-08-28):

 * Enhancements:
   - add pasaffe-dump-db to dump contents of DB to stdout in a human readable
     format

 * Bug fixes:
   - Only update right pane after editing an entry if it's still the one
     that is currently selected
   - Properly install Mallard help files in Lucid and Maverick

0.7 (2011-08-25):

 * Enhancements:
   - Added a simple script to import an entry from the command line

 * Bug fixes:
   - Correctly set default preferences
   - Prevent the edit entry dialog from opening twice and being confused

0.6 (2011-08-23):

 * Enhancements:
   - Added some maintainer scripts
   - Added po directory and translation file
   - Added french translation

 * Bug fixes:
   - Fixed missing tooltip on Open URL button